...

/* Label for the 'update' button in the 'new app version available' alert. */
"APP_UPDATE_NAG_ALERT_UPDATE_BUTTON" = "Update";

/* Name of application */
...

/* Pressing this button moves a thread from the inbox to the archive */
"ARCHIVE_ACTION" = "Archive";

/* No comment provided by engineer. */
...

/* Label for generic done button. */
"BUTTON_DONE" = "Done";

/* Alert message when calling and permissions for microphone are missing */
...

/* a title for the members section of the 'new/update group' view. */
"EDIT_GROUP_MEMBERS_SECTION_TITLE" = "Members";

/* An indicator that a user is a new member of the group. */
...

/* Short name for edit menu item to delete contents of media message. */
"EDIT_ITEM_DELETE_ACTION" = "Delete";

/* Short name for edit menu item to show message metadata. */
...

/* No comment provided by engineer. */
"FINGERPRINT_SHRED_KEYMATERIAL_BUTTON" = "Reset this session.";

/* Accessibilty label for finishing new group */
...

/* No comment provided by engineer. */
"GROUP_YOU_LEFT" = "You have left the group.";

/* A label for conversations with blocked users. */
...

/* Confirmation button within contextual alert */
"LEAVE_BUTTON_TITLE" = "Leave";

/* table cell label in conversation settings */
...

/* No comment provided by engineer. */
"MESSAGE_COMPOSEVIEW_TITLE" = "New Message";

/* Label for file size of attachments in the 'message metadata' view. */
...

/* Used in place of the group name when a group has not yet been named. */
"NEW_GROUP_DEFAULT_TITLE" = "New Group";

/* An indicator that a user is a member of the new group. */
...

/* No comment provided by engineer. */
"NOTIFICATIONS_SENDER_AND_MESSAGE" = "Sender name & message";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"NOTIFICATIONS_SHOW" = "Show";

/* No comment provided by engineer. */
...
/* Button text which opens the settings app
   Label for button which opens the settings UI */
"OPEN_SETTINGS_BUTTON" = "Settings";

/* Info Message when {{other user}} disables or doesn't support disappearing messages */
...

/* Used in table section header and alert view title contexts */
"PUSH_REGISTER_TITLE" = "Push Notifications";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"REREGISTER_FOR_PUSH" = "Re-register for push notifications";

/* Generic text for button that retries whatever the last action was. */
...

/* No comment provided by engineer. */
"SEARCH_BYNAMEORNUMBER_PLACEHOLDER_TEXT" = "Search by name or number";

/* No comment provided by engineer. */
...

/* Label for the send button in the conversation view. */
"SEND_BUTTON_TITLE" = "Send";

/* Header title for the 'send external file' view. */
...

/* No comment provided by engineer. */
"SETTINGS_ADVANCED_DEBUGLOG" = "Enable Debug Log";

/* No comment provided by engineer. */
"SETTINGS_ADVANCED_SUBMIT_DEBUGLOG" = "Submit Debug Log";

/* No comment provided by engineer. */
"SETTINGS_ADVANCED_TITLE" = "Advanced";

/* A label for the 'add phone number' button in the block list table. */
...

/* No comment provided by engineer. */
"SETTINGS_CLEAR_HISTORY" = "Clear History Logs";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"SETTINGS_DELETE_HISTORYLOG_CONFIRMATION_BUTTON" = "I'm sure.";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"SETTINGS_NOTIFICATIONS" = "Notifications";

/* Label for 'CallKit privacy' preference */
...

/* Settings table view cell label */
"SETTINGS_PRIVACY_TITLE" = "Privacy";

/* Label for the 'read receipts' setting. */
...

/* Pressing this button moves an archived thread from the archive back to the inbox */
"UNARCHIVE_ACTION" = "Unarchive";

/* In Inbox view, last message label for thread with corrupted attachment. */
...

/* No comment provided by engineer. */
"WHISPER_NAV_BAR_TITLE" = "Inbox";

/* Info Message when you disable disappearing messages */
...
